force-app/main/default/objects/Location__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>The country in which this location is situated.</description>
    <inlineHelpText>Select the country for this location.</inlineHelpText>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Afghanistan</fullName><default
        >false</default><label>Afghanistan</label></value>
            <value><fullName>Åland Islands</fullName><default
        >false</default><label>Åland Islands</label></value>
            <value><fullName>Albania</fullName><default>false</default><label
        >Albania</label></value>
            <value><fullName>Algeria</fullName><default>false</default><label
        >Algeria</label></value>
            <value><fullName>American Samoa</fullName><default
        >false</default><label>American Samoa</label></value>
            <value><fullName>Andorra</fullName><default>false</default><label
        >Andorra</label></value>
            <value><fullName>Angola</fullName><default>false</default><label
        >Angola</label></value>
            <value><fullName>Anguilla</fullName><default>false</default><label
        >Anguilla</label></value>
            <value><fullName>Antarctica</fullName><default>false</default><label
        >Antarctica</label></value>
            <value><fullName>Antigua and Barbuda</fullName><default
        >false</default><label>Antigua and Barbuda</label></value>
            <value><fullName>Argentina</fullName><default>false</default><label
        >Argentina</label></value>
            <value><fullName>Armenia</fullName><default>false</default><label
        >Armenia</label></value>
            <value><fullName>Aruba</fullName><default>false</default><label
        >Aruba</label></value>
            <value><fullName>Australia</fullName><default>false</default><label
        >Australia</label></value>
            <value><fullName>Austria</fullName><default>false</default><label
        >Austria</label></value>
            <value><fullName>Azerbaijan</fullName><default>false</default><label
        >Azerbaijan</label></value>
            <value><fullName>Bahamas</fullName><default>false</default><label
        >Bahamas</label></value>
            <value><fullName>Bahrain</fullName><default>false</default><label
        >Bahrain</label></value>
            <value><fullName>Bangladesh</fullName><default>false</default><label
        >Bangladesh</label></value>
            <value><fullName>Barbados</fullName><default>false</default><label
        >Barbados</label></value>
            <value><fullName>Belarus</fullName><default>false</default><label
        >Belarus</label></value>
            <value><fullName>Belgium</fullName><default>false</default><label
        >Belgium</label></value>
            <value><fullName>Belize</fullName><default>false</default><label
        >Belize</label></value>
            <value><fullName>Benin</fullName><default>false</default><label
        >Benin</label></value>
            <value><fullName>Bermuda</fullName><default>false</default><label
        >Bermuda</label></value>
            <value><fullName>Bhutan</fullName><default>false</default><label
        >Bhutan</label></value>
            <value><fullName>Bolivia</fullName><default>false</default><label
        >Bolivia</label></value>
            <value><fullName>Bosnia and Herzegovina</fullName><default
        >false</default><label>Bosnia and Herzegovina</label></value>
            <value><fullName>Botswana</fullName><default>false</default><label
        >Botswana</label></value>
            <value><fullName>Bouvet Island</fullName><default
        >false</default><label>Bouvet Island</label></value>
            <value><fullName
        >Congo, The Democratic Republic of the</fullName><default
        >false</default><label
        >Congo, The Democratic Republic of the</label></value>
            <value><fullName>Cook Islands</fullName><default
        >false</default><label>Cook Islands</label></value>
            <value><fullName>Costa Rica</fullName><default>false</default><label
        >Costa Rica</label></value>
            <value><fullName>Cote D'Ivoire</fullName><default
        >false</default><label>Cote D'Ivoire</label></value>
            <value><fullName>Croatia</fullName><default>false</default><label
        >Croatia</label></value>
            <value><fullName>Cuba</fullName><default>false</default><label
        >Cuba</label></value>
            <value><fullName>Cyprus</fullName><default>false</default><label
        >Cyprus</label></value>
            <value><fullName>Czech Republic</fullName><default
        >false</default><label>Czech Republic</label></value>
            <value><fullName>Denmark</fullName><default>false</default><label
        >Denmark</label></value>
            <value><fullName>Djibouti</fullName><default>false</default><label
        >Djibouti</label></value>
            <value><fullName>Dominica</fullName><default>false</default><label
        >Dominica</label></value>
            <value><fullName>Dominican Republic</fullName><default
        >false</default><label>Dominican Republic</label></value>
            <value><fullName>Ecuador</fullName><default>false</default><label
        >Ecuador</label></value>
            <value><fullName>Egypt</fullName><default>false</default><label
        >Egypt</label></value>
            <value><fullName>El Salvador</fullName><default
        >false</default><label>El Salvador</label></value>
            <value><fullName>Equatorial Guinea</fullName><default
        >false</default><label>Equatorial Guinea</label></value>
            <value><fullName>Eritrea</fullName><default>false</default><label
        >Eritrea</label></value>
            <value><fullName>Estonia</fullName><default>false</default><label
        >Estonia</label></value>
            <value><fullName>Ethiopia</fullName><default>false</default><label
        >Ethiopia</label></value>
            <value><fullName>Falkland Islands (Malvinas)</fullName><default
        >false</default><label>Falkland Islands (Malvinas)</label></value>
            <value><fullName>Faroe Islands</fullName><default
        >false</default><label>Faroe Islands</label></value>
            <value><fullName>Fiji</fullName><default>false</default><label
        >Fiji</label></value>
            <value><fullName>Finland</fullName><default>false</default><label
        >Finland</label></value>
            <value><fullName>France</fullName><default>false</default><label
        >France</label></value>
            <value><fullName>French Guiana</fullName><default
        >false</default><label>French Guiana</label></value>
            <value><fullName>French Polynesia</fullName><default
        >false</default><label>French Polynesia</label></value>
            <value><fullName>French Southern Territories</fullName><default
        >false</default><label>French Southern Territories</label></value>
            <value><fullName>Gabon</fullName><default>false</default><label
        >Gabon</label></value>
            <value><fullName>Gambia</fullName><default>false</default><label
        >Gambia</label></value>
            <value><fullName>Georgia</fullName><default>false</default><label
        >Georgia</label></value>
            <value><fullName>Germany</fullName><default>false</default><label
        >Germany</label></value>
            <value><fullName
        >Heard Island and Mcdonald Islands</fullName><default
        >false</default><label>Heard Island and Mcdonald Islands</label></value>
            <value><fullName>Holy See (Vatican City State)</fullName><default
        >false</default><label>Holy See (Vatican City State)</label></value>
            <value><fullName>Honduras</fullName><default>false</default><label
        >Honduras</label></value>
            <value><fullName>Hong Kong</fullName><default>false</default><label
        >Hong Kong</label></value>
            <value><fullName>Hungary</fullName><default>false</default><label
        >Hungary</label></value>
            <value><fullName>Iceland</fullName><default>false</default><label
        >Iceland</label></value>
            <value><fullName>India</fullName><default>false</default><label
        >India</label></value>
            <value><fullName>Indonesia</fullName><default>false</default><label
        >Indonesia</label></value>
            <value><fullName>Iran, Islamic Republic Of</fullName><default
        >false</default><label>Iran, Islamic Republic Of</label></value>
            <value><fullName>Iraq</fullName><default>false</default><label
        >Iraq</label></value>
            <value><fullName>Ireland</fullName><default>false</default><label
        >Ireland</label></value>
            <value><fullName>Isle of Man</fullName><default
        >false</default><label>Isle of Man</label></value>
            <value><fullName>Israel</fullName><default>false</default><label
        >Israel</label></value>
            <value><fullName>Italy</fullName><default>false</default><label
        >Italy</label></value>
            <value><fullName>Jamaica</fullName><default>false</default><label
        >Jamaica</label></value>
            <value><fullName>Japan</fullName><default>false</default><label
        >Japan</label></value>
            <value><fullName>Jersey</fullName><default>false</default><label
        >Jersey</label></value>
            <value><fullName>Jordan</fullName><default>false</default><label
        >Jordan</label></value>
            <value><fullName>Kazakhstan</fullName><default>false</default><label
        >Kazakhstan</label></value>
            <value><fullName>Kenya</fullName><default>false</default><label
        >Kenya</label></value>
            <value><fullName>Kiribati</fullName><default>false</default><label
        >Kiribati</label></value>
            <value><fullName
        >Korea, Democratic People's Republic of</fullName><default
        >false</default><label
        >Korea, Democratic People's Republic of</label></value>
            <value><fullName>Korea, Republic of</fullName><default
        >false</default><label>Korea, Republic of</label></value>
            <value><fullName>Kuwait</fullName><default>false</default><label
        >Kuwait</label></value>
            <value><fullName>Kyrgyzstan</fullName><default>false</default><label
        >Kyrgyzstan</label></value>
            <value><fullName>Lao People's Democratic Republic</fullName><default
        >false</default><label>Lao People's Democratic Republic</label></value>
            <value><fullName>Latvia</fullName><default>false</default><label
        >Latvia</label></value>
            <value><fullName>Lebanon</fullName><default>false</default><label
        >Lebanon</label></value>
            <value><fullName>Lesotho</fullName><default>false</default><label
        >Lesotho</label></value>
            <value><fullName>Liberia</fullName><default>false</default><label
        >Liberia</label></value>
            <value><fullName>Libyan Arab Jamahiriya</fullName><default
        >false</default><label>Libyan Arab Jamahiriya</label></value>
            <value><fullName>Liechtenstein</fullName><default
        >false</default><label>Liechtenstein</label></value>
            <value><fullName>Lithuania</fullName><default>false</default><label
        >Lithuania</label></value>
            <value><fullName>Luxembourg</fullName><default>false</default><label
        >Luxembourg</label></value>
            <value><fullName>Macao</fullName><default>false</default><label
        >Macao</label></value>
            <value><fullName
        >Macedonia, The Former Yugoslav Republic of</fullName><default
        >false</default><label
        >Macedonia, The Former Yugoslav Republic of</label></value>
            <value><fullName>Madagascar</fullName><default>false</default><label
        >Madagascar</label></value>
            <value><fullName>Malawi</fullName><default>false</default><label
        >Malawi</label></value>
            <value><fullName>Malaysia</fullName><default>false</default><label
        >Malaysia</label></value>
            <value><fullName>Maldives</fullName><default>false</default><label
        >Maldives</label></value>
            <value><fullName>Mali</fullName><default>false</default><label
        >Mali</label></value>
            <value><fullName>Malta</fullName><default>false</default><label
        >Malta</label></value>
            <value><fullName>Marshall Islands</fullName><default
        >false</default><label>Marshall Islands</label></value>
            <value><fullName>Martinique</fullName><default>false</default><label
        >Martinique</label></value>
            <value><fullName>Mauritania</fullName><default>false</default><label
        >Mauritania</label></value>
            <value><fullName>Mauritius</fullName><default>false</default><label
        >Mauritius</label></value>
            <value><fullName>Mayotte</fullName><default>false</default><label
        >Mayotte</label></value>
            <value><fullName>Mexico</fullName><default>false</default><label
        >Mexico</label></value>
            <value><fullName>Micronesia, Federated States of</fullName><default
        >false</default><label>Micronesia, Federated States of</label></value>
            <value><fullName>Moldova, Republic of</fullName><default
        >false</default><label>Moldova, Republic of</label></value>
            <value><fullName>Monaco</fullName><default>false</default><label
        >Monaco</label></value>
            <value><fullName>Mongolia</fullName><default>false</default><label
        >Mongolia</label></value>
            <value><fullName>Montenegro</fullName><default>false</default><label
        >Montenegro</label></value>
            <value><fullName>Montserrat</fullName><default>false</default><label
        >Montserrat</label></value>
            <value><fullName>Morocco</fullName><default>false</default><label
        >Morocco</label></value>
            <value><fullName>Mozambique</fullName><default>false</default><label
        >Mozambique</label></value>
            <value><fullName>Myanmar</fullName><default>false</default><label
        >Myanmar</label></value>
            <value><fullName>Namibia</fullName><default>false</default><label
        >Namibia</label></value>
            <value><fullName>Nauru</fullName><default>false</default><label
        >Nauru</label></value>
            <value><fullName>Nepal</fullName><default>false</default><label
        >Nepal</label></value>
            <value><fullName>Netherlands</fullName><default
        >false</default><label>Netherlands</label></value>
            <value><fullName>Netherlands Antilles</fullName><default
        >false</default><label>Netherlands Antilles</label></value>
            <value><fullName>New Caledonia</fullName><default
        >false</default><label>New Caledonia</label></value>
            <value><fullName>New Zealand</fullName><default
        >false</default><label>New Zealand</label></value>
            <value><fullName>Nicaragua</fullName><default>false</default><label
        >Nicaragua</label></value>
            <value><fullName>Niger</fullName><default>false</default><label
        >Niger</label></value>
            <value><fullName
        >South Georgia and the South Sandwich Islands</fullName><default
        >false</default><label
        >South Georgia and the South Sandwich Islands</label></value>
            <value><fullName>Spain</fullName><default>false</default><label
        >Spain</label></value>
            <value><fullName>Sri Lanka</fullName><default>false</default><label
        >Sri Lanka</label></value>
            <value><fullName>Sudan</fullName><default>false</default><label
        >Sudan</label></value>
            <value><fullName>Suriname</fullName><default>false</default><label
        >Suriname</label></value>
            <value><fullName>Svalbard and Jan Mayen</fullName><default
        >false</default><label>Svalbard and Jan Mayen</label></value>
            <value><fullName>Swaziland</fullName><default>false</default><label
        >Swaziland</label></value>
            <value><fullName>Sweden</fullName><default>false</default><label
        >Sweden</label></value>
            <value><fullName>Switzerland</fullName><default
        >false</default><label>Switzerland</label></value>
            <value><fullName>Syrian Arab Republic</fullName><default
        >false</default><label>Syrian Arab Republic</label></value>
            <value><fullName>Taiwan, Province of China</fullName><default
        >false</default><label>Taiwan, Province of China</label></value>
            <value><fullName>Tajikistan</fullName><default>false</default><label
        >Tajikistan</label></value>
            <value><fullName>Tanzania, United Republic of</fullName><default
        >false</default><label>Tanzania, United Republic of</label></value>
            <value><fullName>Thailand</fullName><default>false</default><label
        >Thailand</label></value>
            <value><fullName>Timor-Leste</fullName><default
        >false</default><label>Timor-Leste</label></value>
            <value><fullName>Togo</fullName><default>false</default><label
        >Togo</label></value>
            <value><fullName>Tokelau</fullName><default>false</default><label
        >Tokelau</label></value>
            <value><fullName>Tonga</fullName><default>false</default><label
        >Tonga</label></value>
            <value><fullName>Trinidad and Tobago</fullName><default
        >false</default><label>Trinidad and Tobago</label></value>
            <value><fullName>Tunisia</fullName><default>false</default><label
        >Tunisia</label></value>
            <value><fullName>Turkey</fullName><default>false</default><label
        >Turkey</label></value>
            <value><fullName>Turkmenistan</fullName><default
        >false</default><label>Turkmenistan</label></value>
            <value><fullName>Turks and Caicos Islands</fullName><default
        >false</default><label>Turks and Caicos Islands</label></value>
            <value><fullName>Tuvalu</fullName><default>false</default><label
        >Tuvalu</label></value>
            <value><fullName>Uganda</fullName><default>false</default><label
        >Uganda</label></value>
            <value><fullName>Ukraine</fullName><default>false</default><label
        >Ukraine</label></value>
            <value><fullName>United Arab Emirates</fullName><default
        >false</default><label>United Arab Emirates</label></value>
            <value><fullName>United Kingdom</fullName><default
        >false</default><label>United Kingdom</label></value>
            <value><fullName>United States</fullName><default
        >false</default><label>United States</label></value>
            <value><fullName
        >United States Minor Outlying Islands</fullName><default
        >false</default><label
        >United States Minor Outlying Islands</label></value>
            <value><fullName>Uruguay</fullName><default>false</default><label
        >Uruguay</label></value>
            <value><fullName>Uzbekistan</fullName><default>false</default><label
        >Uzbekistan</label></value>
            <value><fullName>Vanuatu</fullName><default>false</default><label
        >Vanuatu</label></value>
            <value><fullName>Venezuela</fullName><default>false</default><label
        >Venezuela</label></value>
            <value><fullName>Viet Nam</fullName><default>false</default><label
        >Viet Nam</label></value>
            <value><fullName>Virgin Islands, British</fullName><default
        >false</default><label>Virgin Islands, British</label></value>
            <value><fullName>Virgin Islands, U.S.</fullName><default
        >false</default><label>Virgin Islands, U.S.</label></value>
            <value><fullName>Wallis and Futuna</fullName><default
        >false</default><label>Wallis and Futuna</label></value>
            <value><fullName>Western Sahara</fullName><default
        >false</default><label>Western Sahara</label></value>
            <value><fullName>Yemen</fullName><default>false</default><label
        >Yemen</label></value>
            <value><fullName>Zambia</fullName><default>false</default><label
        >Zambia</label></value>
            <value><fullName>Zimbabwe</fullName><default>false</default><label
        >Zimbabwe</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>