force-app/main/default/objects/Location__c/fields/Land_Mark__c.field-meta.xml
<CustomField>
    <fullName>Land_Mark__c</fullName>
    <description
  >A nearby landmark that helps identify or locate this location.</description>
    <inlineHelpText
  >Enter a nearby landmark to help identify this location.</inlineHelpText>
    <label>Land Mark</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>