force-app/main/default/objects/Location__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>The postal or ZIP code for this location.</description>
    <inlineHelpText>Enter the postal code for this location.</inlineHelpText>
    <label>Postal Code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>