force-app/main/default/objects/Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description
  >The state or province in which this location is situated.</description>
    <inlineHelpText
  >Enter the state or province for this location.</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>