force-app/main/default/objects/Location__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>The street address portion of the location.</description>
    <inlineHelpText>Enter the street address for this location.</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>