force-app/main/default/objects/Location__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Tracks whether this location's address has been confirmed as accurate.</description>
    <inlineHelpText
  >Indicates if the location is verified or not.</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>